--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -305,10 +305,10 @@
             </objects>
             <point key="canvasLocation" x="1986" y="224"/>
         </scene>
-        <!--Calendar View Controller-->
+        <!--Calendar View Controller Old-->
         <scene sceneID="hqa-M0-fLW">
             <objects>
-                <viewController storyboardIdentifier="Calendar" id="op4-Li-Azg" customClass="CalendarViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalendarOld" id="op4-Li-Azg" customClass="CalendarViewControllerOld" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PLK-aj-f5f"/>
                         <viewControllerLayoutGuide type="bottom" id="tsw-pT-SjO"/>
